Fix hightlighting cutting off font kerning
Add 'font-kerning: none' CSS attribute to avoid font kerning from being
cut off.

Bug: T232490

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -20,20 +20,10 @@ html.wwt-popup body {
 
 .mw-parser-output .editor-token {
 	cursor: pointer;
-	position: relative;
-	display: inline-block;
-	white-space: pre;
+	font-kerning: none;
 
-	&.active::before {
-		content: '';
+	&.active {
 		background-color: #facc48;
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: -1;
-		width: 100%;
-		height: 100%;
-		padding-bottom: 6px;
 	}
 }
 
